[gd_scene load_steps=22 format=3 uid="uid://dvodnr4utvfun"]

[ext_resource type="Script" path="res://Scripts/mainMenu.gd" id="1_s2c4v"]
[ext_resource type="Shader" path="res://Resources/Shaders/wiggle.gdshader" id="2_kksby"]
[ext_resource type="Theme" uid="uid://c3t3dtsco6rf6" path="res://Resources/Themes/MainMenuTheme.tres" id="2_kn6pq"]
[ext_resource type="Script" path="res://Scripts/UI/Main menu/SettingsOptionsManager.gd" id="4_b0thl"]
[ext_resource type="Shader" path="res://Resources/Shaders/wavy.gdshader" id="4_j7w7e"]
[ext_resource type="Script" path="res://Scripts/UI/Main menu/MainScreenManager.gd" id="4_meqqy"]
[ext_resource type="Script" path="res://Scripts/UI/Main menu/SettingsManager.gd" id="4_mw7i6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v5r0w"]
shader = ExtResource("4_j7w7e")
shader_parameter/height = 10.0
shader_parameter/frequency = 3.0
shader_parameter/speed = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_hc3o6"]
font_size = 58
font_color = Color(1, 0.67451, 0.490196, 1)
outline_size = 12
outline_color = Color(0.494118, 0.192157, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y2dy2"]
shader = ExtResource("4_j7w7e")
shader_parameter/height = 1.0
shader_parameter/frequency = 3.0
shader_parameter/speed = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_cnm72"]
font_size = 35
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.407843)
shadow_offset = Vector2(-0.054, 4.021)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_us17e"]
shader = ExtResource("4_j7w7e")
shader_parameter/height = 1.305
shader_parameter/frequency = 3.0
shader_parameter/speed = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_or5xf"]
shader = ExtResource("2_kksby")
shader_parameter/height = 10.0
shader_parameter/frequency = 3.0
shader_parameter/speed = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_wnjly"]
font_size = 60
font_color = Color(0.721569, 0.321569, 1, 1)
outline_size = 9
outline_color = Color(0.0352941, 0.0352941, 0.0352941, 1)
shadow_size = 629

[sub_resource type="Animation" id="Animation_p0hs6"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuCamera:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.0005, 0, 0.0005, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuCamera:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.0005, 0, 0.0005, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_58br0"]
resource_name = "moveCameraToMain"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuCamera:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1920, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuCamera:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_a42c3"]
resource_name = "moveCameraToSettings"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuCamera:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1920, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuCamera:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2esg5"]
_data = {
&"RESET": SubResource("Animation_p0hs6"),
&"moveCameraToMain": SubResource("Animation_58br0"),
&"moveCameraToSettings": SubResource("Animation_a42c3")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_noc5u"]
bg_color = Color(0.735371, 0.217862, 0, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 22
border_color = Color(0.737255, 0.219608, 0, 0)
border_blend = true
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="Theme" id="Theme_m535n"]
AcceptDialog/styles/panel = SubResource("StyleBoxFlat_noc5u")

[sub_resource type="LabelSettings" id="LabelSettings_68wlk"]
font_size = 25
outline_size = 13
outline_color = Color(0.530579, 0.188905, 0.0344643, 1)

[node name="MainMenuRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_s2c4v")

[node name="MainScreenControlNode" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanelContainer" type="PanelContainer" parent="MainScreenControlNode"]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("2_kn6pq")
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="MainScreenControlNode/MainPanelContainer"]
layout_mode = 2

[node name="MainVBox" type="VBoxContainer" parent="MainScreenControlNode/MainPanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="TitleLabel" type="Label" parent="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox"]
material = SubResource("ShaderMaterial_v5r0w")
layout_mode = 2
theme = ExtResource("2_kn6pq")
text = "Telepumpkin"
label_settings = SubResource("LabelSettings_hc3o6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VersionLabel" type="Label" parent="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox"]
material = SubResource("ShaderMaterial_y2dy2")
layout_mode = 2
theme = ExtResource("2_kn6pq")
text = "Version 0.8.0"
label_settings = SubResource("LabelSettings_cnm72")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainButtonsVBox" type="VBoxContainer" parent="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 15
script = ExtResource("4_meqqy")

[node name="StartButton" type="Button" parent="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox/MainButtonsVBox"]
material = SubResource("ShaderMaterial_us17e")
layout_mode = 2
focus_neighbor_bottom = NodePath("../SettingsButton")
theme = ExtResource("2_kn6pq")
text = "Start"

[node name="SettingsButton" type="Button" parent="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox/MainButtonsVBox"]
material = SubResource("ShaderMaterial_us17e")
layout_mode = 2
focus_neighbor_bottom = NodePath("../QuitButton")
theme = ExtResource("2_kn6pq")
text = "Settings"
expand_icon = true

[node name="QuitButton" type="Button" parent="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox/MainButtonsVBox"]
material = SubResource("ShaderMaterial_us17e")
layout_mode = 2
focus_neighbor_top = NodePath("../SettingsButton")
theme = ExtResource("2_kn6pq")
text = "Quit"

[node name="SettingsControlNode" type="Control" parent="."]
layout_mode = 1
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsBackgroundContainer" type="PanelContainer" parent="SettingsControlNode"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="SettingsCenterContainer" type="CenterContainer" parent="SettingsControlNode/SettingsBackgroundContainer"]
layout_mode = 2

[node name="SettingsHFlowContainer" type="HFlowContainer" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer"]
layout_mode = 2
theme_override_constants/v_separation = 105
alignment = 1

[node name="SettingsLabel" type="Label" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer"]
material = SubResource("ShaderMaterial_or5xf")
layout_mode = 2
theme = ExtResource("2_kn6pq")
text = "Settings"
label_settings = SubResource("LabelSettings_wnjly")

[node name="SettingsMenu" type="GridContainer" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/v_separation = 25
script = ExtResource("4_mw7i6")

[node name="SettingsOptionsContainer" type="TabContainer" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu"]
custom_minimum_size = Vector2(700, 500)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_kn6pq")
tab_alignment = 1
current_tab = 0
clip_tabs = false
all_tabs_in_front = true
script = ExtResource("4_b0thl")

[node name="GraphicsSettings" type="MarginContainer" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35
metadata/_tab_index = 0

[node name="GraphicsSettingsVBox" type="VBoxContainer" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer/GraphicsSettings"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ResolutionDropdown" type="OptionButton" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer/GraphicsSettings/GraphicsSettingsVBox"]
visible = false
layout_mode = 2
tooltip_text = "Adjust the resolution"
focus_neighbor_right = NodePath("../SimpleGraphicsToggle")
focus_neighbor_bottom = NodePath("../FullscreenToggle")
theme = ExtResource("2_kn6pq")
selected = 1
item_count = 3
popup/item_0/text = "2560x1440"
popup/item_0/id = 0
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "1280x800"
popup/item_2/id = 2

[node name="SimpleGraphicsToggle" type="CheckBox" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer/GraphicsSettings/GraphicsSettingsVBox"]
layout_mode = 2
tooltip_text = "Removes most of the particles and shaders. Should improve performance somewhat."
focus_neighbor_left = NodePath("../ResolutionDropdown")
focus_neighbor_right = NodePath("../../../AudioSettings/AudioSettingsVBox/MuteToggle")
theme = ExtResource("2_kn6pq")
text = "Fast Graphics"

[node name="FullscreenToggle" type="CheckBox" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer/GraphicsSettings/GraphicsSettingsVBox"]
layout_mode = 2
tooltip_text = "Enable or disable fullscreen"
theme = ExtResource("2_kn6pq")
text = "Fullscreen"

[node name="AudioSettings" type="MarginContainer" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35
metadata/_tab_index = 1

[node name="AudioSettingsVBox" type="VBoxContainer" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer/AudioSettings"]
layout_mode = 2

[node name="MuteToggle" type="CheckBox" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer/AudioSettings/AudioSettingsVBox"]
layout_mode = 2
tooltip_text = "Enable or disable fullscreen"
theme = ExtResource("2_kn6pq")
text = "Mute Audio"

[node name="HSeparator" type="HSeparator" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="SettingsButtonsContainer" type="VBoxContainer" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="ApplyButton" type="Button" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsButtonsContainer"]
material = SubResource("ShaderMaterial_us17e")
layout_mode = 2
tooltip_text = "Changing the settings requires a restart"
focus_neighbor_top = NodePath("../BackButton")
focus_neighbor_bottom = NodePath("../SaveRemoveButton")
theme = ExtResource("2_kn6pq")
text = "Apply"

[node name="BackButton" type="Button" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsButtonsContainer"]
material = SubResource("ShaderMaterial_us17e")
layout_mode = 2
tooltip_text = "Go back to the main menu"
focus_neighbor_top = NodePath("../../SettingsOptionsContainer/GraphicsSettings/GraphicsSettingsVBox/FullscreenToggle")
focus_neighbor_bottom = NodePath("../ApplyButton")
theme = ExtResource("2_kn6pq")
text = "Back"

[node name="HSeparator" type="HSeparator" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsButtonsContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 9

[node name="LoadLevelButton" type="Button" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsButtonsContainer"]
material = SubResource("ShaderMaterial_us17e")
layout_mode = 2
tooltip_text = "Can be used to load custom levels"
focus_neighbor_top = NodePath("../SaveRemoveButton")
theme = ExtResource("2_kn6pq")
text = "Load Level"

[node name="SaveRemoveButton" type="Button" parent="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsButtonsContainer"]
material = SubResource("ShaderMaterial_us17e")
layout_mode = 2
tooltip_text = "Deletes your save data"
focus_neighbor_top = NodePath("../ApplyButton")
theme = ExtResource("2_kn6pq")
disabled = true
text = "Delete Save"

[node name="MenuCamera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2esg5")
}
autoplay = "RESET"

[node name="levelDialogue" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(503, 503)
ok_button_text = "Open"
file_mode = 0
access = 2
root_subfolder = "/levels"
filters = PackedStringArray("*.tscn ; GD Scene")

[node name="startTutorial" type="ConfirmationDialog" parent="."]
disable_3d = true
transparent_bg = true
title = "Please confirm..."
initial_position = 2
size = Vector2i(477, 178)
unresizable = true
borderless = true
always_on_top = true
transparent = true
popup_window = true
theme = SubResource("Theme_m535n")
ok_button_text = "Yes"
cancel_button_text = "No, just start"

[node name="tutorialLabel" type="Label" parent="startTutorial"]
offset_left = 7.0
offset_top = 7.0
offset_right = 470.0
offset_bottom = 115.0
text = "
Would you like to play the tutorial?"
label_settings = SubResource("LabelSettings_68wlk")
horizontal_alignment = 1

[connection signal="playerSaveWasDeleted" from="." to="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox/MainButtonsVBox" method="_user_save_removed"]
[connection signal="settingsButtonPressed" from="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox/MainButtonsVBox" to="." method="_on_settings_button_pressed"]
[connection signal="startButtonPressed" from="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox/MainButtonsVBox" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox/MainButtonsVBox/StartButton" to="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox/MainButtonsVBox" method="_on_start_pressed"]
[connection signal="pressed" from="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox/MainButtonsVBox/SettingsButton" to="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox/MainButtonsVBox" method="_on_settings_pressed"]
[connection signal="pressed" from="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox/MainButtonsVBox/QuitButton" to="MainScreenControlNode/MainPanelContainer/CenterContainer/MainVBox/MainButtonsVBox" method="_on_quit_pressed"]
[connection signal="backButtonPressed" from="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu" to="." method="_on_back_button_pressed"]
[connection signal="loadLevelButtonPressed" from="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu" to="." method="_open_level_select_window"]
[connection signal="playerSaveDeleted" from="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu" to="." method="_on_player_save_deleted"]
[connection signal="item_selected" from="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer/GraphicsSettings/GraphicsSettingsVBox/ResolutionDropdown" to="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer" method="_on_resolution_settings_item_selected"]
[connection signal="toggled" from="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer/GraphicsSettings/GraphicsSettingsVBox/SimpleGraphicsToggle" to="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer" method="_on_graphics_settings_toggled"]
[connection signal="toggled" from="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer/GraphicsSettings/GraphicsSettingsVBox/FullscreenToggle" to="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer" method="_on_fullscreen_toggled"]
[connection signal="toggled" from="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer/AudioSettings/AudioSettingsVBox/MuteToggle" to="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsOptionsContainer" method="_on_mute_toggled"]
[connection signal="pressed" from="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsButtonsContainer/ApplyButton" to="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu" method="_on_apply_pressed"]
[connection signal="pressed" from="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsButtonsContainer/BackButton" to="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu" method="_on_back_button_pressed"]
[connection signal="pressed" from="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsButtonsContainer/LoadLevelButton" to="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu" method="_on_load_level_button_pressed"]
[connection signal="pressed" from="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu/SettingsButtonsContainer/SaveRemoveButton" to="SettingsControlNode/SettingsBackgroundContainer/SettingsCenterContainer/SettingsHFlowContainer/SettingsMenu" method="_on_save_remove_pressed"]
[connection signal="file_selected" from="levelDialogue" to="." method="_on_level_dialogue_file_selected"]
[connection signal="canceled" from="startTutorial" to="." method="_on_start_tutorial_canceled"]
[connection signal="confirmed" from="startTutorial" to="." method="_on_start_tutorial_confirmed"]
